# eevee-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/eevee-ast/: Cargo.toml
crates/eevee-ast/src/: lib.rs
crates/eevee-core/: Cargo.toml
crates/eevee-core/src/: lib.rs  logic.rs  region.rs  time.rs
crates/eevee-elab/: Cargo.toml
crates/eevee-elab/examples/: uvm_elab.rs  uvm_run.rs  uvm_run_test.rs
crates/eevee-elab/src/: conformance.rs  lib.rs  mono.rs
crates/eevee-elab/tests/: classes.rs  collections.rs  end_to_end.rs  extern_ctor.rs  fork_join.rs  formatting.rs  functions.rs  parameterized.rs  procedural.rs  statics.rs
crates/eevee-fe/: Cargo.toml
crates/eevee-fe/examples/: pp_probe.rs
crates/eevee-fe/src/: conformance.rs  cst.rs  lib.rs  lower.rs  preprocess.rs
crates/eevee-fe/tests/: parse.rs
crates/eevee-ir/: Cargo.toml
crates/eevee-ir/examples/: counter_ir_bench.rs
crates/eevee-ir/src/: inst.rs  interp.rs  lib.rs  value.rs
crates/eevee-ir/tests/: interp.rs
crates/eevee-sched/: Cargo.toml
crates/eevee-sched/examples/: counter_bench.rs
crates/eevee-sched/src/: kernel.rs  lib.rs  net.rs  process.rs
crates/eevee-sched/tests/: scheduler.rs
docs/: conformance.md  continuation-prompt.md  frontend-decision.md  perf-log.md
