[package]
name = "eevee-sched"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Event-driven simulation kernel: nets with sensitivity lists, stratified regions, NBA, and resumable processes."

[dependencies]
eevee-core = { path = "../eevee-core" }

[[example]]
name = "counter_bench"
path = "examples/counter_bench.rs"
